# garden_auction

./: pyproject.toml
data/: 2024 AUCTION template (1).docx  IG_1-1.xlsx  IG_1-12.xlsx  IG_1-2.csv  IG_1-3.xlsx  IG_1-4.xlsx  IG_1-6.xlsx  IG_1.-5.csv  IG_1.csv  IG_11-05.xlsx  IG_7.xlsx  IG_8.xlsx  IG_nov-3.xlsx  IG_nov_3.2.xlsx  original.xlsx  silent.xlsx
data/apex/: f118839.sql
data/items/: IG_1-5.xlsx
src/: auction.py  auction_item.py  description.py  drinks.py  example.py  paragraph1.py  table.py  title.py
src/district_level_garden/: auction.py  auction_item.py  description.py  table.py  title.py
src/garden/: auction.py  auction_item.py  bid.py  description.py  table.py  title.py
src/garden_tour_signup/: description.py  garden_tour.py  table.py  title.py
src/newcomers/: bid.py  description.py  paragraph1.py  table.py  title.py
test/: test_district_level_auction_item.py
