[tool.poetry]
name = "garden-form"
version = "0.1.0"
description = ""
authors = ["Nick Strange <nsstrange@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^4.2.2"
pytest = "^8.3.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
